Button animation firefox bug fixed. Button margin-left added.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -147,7 +147,7 @@ html
   height: 35px
   border-radius: 20px
   align: right
-  margin-left: auto
+  margin-left: 10px
   margin-right: 28px
   a
     height: 100%
